# favilrose

./: Cargo.toml  Makefile  README.md  penrose.desktop
scripts/: penrose-startup.sh
src/: bar.rs  bindings.rs  hooks.rs  layouts.rs  lib.rs  main.rs  mouse.rs
systemd/system/: suspend-then-hibernate@.service  suspend@.service
systemd/user/: i3lock.service  suspend-then-hibernate.target  suspend.target
