[package]
name = "favilo-penrose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
penrose = "0.3.6"
penrose_ui = "0.3.6"
simplelog = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
# penrose = { path = "../penrose/" }
# penrose_ui = { path = "../penrose/crates/penrose_ui/" }
