[package]
name = "favilo-penrose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
penrose = { version = "0.4.0", features = ["serde"] }
penrose_ui = "0.4.0"
serde_json = "1.0.128"
simplelog = "0.12.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
x11rb = "0.13.1"
x11rb-protocol = "0.13.1"

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
# penrose = { path = "../penrose/" }
# penrose_ui = { path = "../penrose/crates/penrose_ui/" }
